# generalised-web-scraper

./: .gitignore  Diagram.drawio  Element.py  ElementSequence.py  Pipfile  README.md  Selector.py  StatusRow.py  WebScraper.py  canvas_scraper.py  extract_youtube_transcript.py  pyproject.toml  web_scraper.py  web_scraper_errors.py
src/generalised_web_scraper/: DownloadHandler.py  Element.py  ElementSequence.py  WebScraper.py  __init__.py
